# Weather-CLI

./: Cargo.toml  README.md  data.txt
src/: main.rs
